--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-responsive": "^8.2.0",
     "react-styled-flexboxgrid": "^3.2.1",
     "react-ticker": "^1.2.2",
+    "react-twitter-embed": "^3.0.3",
     "styled-components": "^5.2.3",
     "typewriter-effect": "^2.17.0"
   },
